--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -54,24 +54,13 @@
 
 {% block content %}
 <div class="row">
+    {% for topic in topics %}
     <div class="col-lg-4 text-center">
-        <img class="rounded-circle" src="https://picsum.photos/300/300/?random=4" alt="Generic placeholder image" width="140" height="140">
-        <h2>Heading</h2>
-        <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-        <p><a class="btn btn-secondary" href="subjects/news.html" role="button">Ver más &raquo;</a></p>
-    </div><!-- /.col-lg-4 -->
-    <div class="col-lg-4 text-center">
-        <img class="rounded-circle" src="https://picsum.photos/300/300/?random=5" alt="Generic placeholder image" width="140" height="140">
-        <h2>Heading</h2>
-        <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-        <p><a class="btn btn-secondary" href="subjects/news.html" role="button">Ver más &raquo;</a></p>
-    </div><!-- /.col-lg-4 -->
-    <div class="col-lg-4 text-center">
-        <img class="rounded-circle" src="https://picsum.photos/300/300/?random=6" alt="Generic placeholder image" width="140" height="140">
-        <h2>Heading</h2>
-        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit.</p>
-        <p><a class="btn btn-secondary" href="subjects/news.html" role="button">Ver más &raquo;</a></p>
-    </div><!-- /.col-lg-4 -->
-    </div><!-- /.row -->
+        <div class="topic-featured rounded-circle mx-auto" style="background-image: url('{{topic.imagen.url}}')"></div>
+        <h2>{{topic.titulo}}</h2>
+        <p>{{topic.contenido|truncatechars:240}}</p>
+        <p><a class="btn btn-secondary" href="{% url 'topic.detail' topic.id %}" role="button">Leer más &raquo;</a></p>
+    </div>
+    {% endfor %}
 </div>
 {% endblock %}
