--- a/foro/templates/foro/topic_edit.html
+++ b/foro/templates/foro/topic_edit.html
@@ -15,7 +15,7 @@
         {% endif %}
         <form method="POST" enctype="multipart/form-data">{% csrf_token %}
             <div> {{ form.as_p }}</div>
-            <div><button type="submit" class="btn btn-primary btn-block">Agregar</button></div>
+            <div><button type="submit" class="btn btn-primary btn-block">Editar</button></div>
         </form>
     </div> 
 </div>   
